# B-52-Beam-Optimization

./: Cargo.toml
src/: beams.rs  main.rs
